[package]
name = "solfmt"
version = "0.2.1"
edition = "2021"
description = "Formats output of Solana's `cargo test-bpf/test-sbf` command"
license = "MIT"
repository = "https://github.com/thlorenz/solfmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
ansi_term = "0.12"
